--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,18 @@
 @media (max-width: 768px)
 {
-
+  header
+  {
+    text-align: center;
+  }
+  header img
+  {
+    margin-top: 30px;
+  }
+  section.geo
+  {
+    margin-top: 25px;
+    text-align: center;
+    background-color: #EAEAEA;
+    padding: 20px 0 20px 0;
+  }
 }
