--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
 
   section.explore
   {
-    padding: 40px 90px 0 90px;
+    padding: 40px 90px 40px 90px;
     margin: 0;
     background-color: #F6F6F6;
     text-align: center;
@@ -58,5 +58,16 @@
     background: rgb(147,86,220);
     background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 100%);
     border-radius: 40px;
+  }
+
+  section.features
+  {
+    padding: 40px 20px 40px 20px;
+  }
+  section.features h2
+  {
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 25px;
   }
 }
