--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,6 @@
   {
     margin-top: 30px;
   }
-
   section.geo
   {
     margin: 0;
@@ -34,7 +33,6 @@
   }
   section.explore h1
   {
-
     font-family: 'Roboto';
     font-weight: 00;
     margin: 0;
@@ -59,15 +57,53 @@
     background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 100%);
     border-radius: 40px;
   }
-
   section.features
   {
-    padding: 40px 20px 40px 20px;
+    padding: 20px 20px 40px 20px;
   }
   section.features h2
   {
     font-family: 'Roboto';
     font-weight: 700;
+    font-size: 30px;
+  }
+  section.features {}
+  section.features .item
+  {
+    width: 75%;
+    margin: auto;
+    margin-bottom: 25px;
+    padding: 25px 30px 25px 50px;
+    background-color: #F6F6F6;
+    -webkit-box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
+    box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
+    border-radius: 25px;
+    font-family: 'Roboto';
+  }
+  section.features .item p.circle
+  {
+    width: 35px;
+    height: 25px;
+    position:absolute;
+    margin-left: -60px;
+    margin-top: 20px;
+    border-radius: 35px;
+    background-color: #9356DC;
+    color: #fff;
+    font-family: 'Roboto';
+    font-weight: 600;
+    text-align: center;
+    padding-top: 10px;
+  }
+  section.features .item p:not(.circle)
+  {
     font-size: 25px;
+    font-weight: 600;
+  }
+  section.features .item p i
+  {
+    color: #7E7E7E;
+    font-weight: 600;
+    margin-right: 20px;
   }
 }
