--- a/css/main.css
+++ b/css/main.css
@@ -57,11 +57,11 @@
     background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 100%);
     border-radius: 40px;
   }
-  section.features
+  section.features, section.restaurants
   {
     padding: 20px 20px 40px 20px;
   }
-  section.features h2
+  section.features h2, section.restaurants h2
   {
     font-family: 'Roboto';
     font-weight: 700;
@@ -72,13 +72,16 @@
   {
     width: 75%;
     margin: auto;
-    margin-bottom: 25px;
     padding: 25px 30px 25px 50px;
     background-color: #F6F6F6;
     -webkit-box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
     box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
     border-radius: 25px;
     font-family: 'Roboto';
+  }
+  section.features .item:not(:last-of-type)
+  {
+    margin-bottom: 25px;
   }
   section.features .item p.circle
   {
@@ -105,5 +108,48 @@
     color: #7E7E7E;
     font-weight: 600;
     margin-right: 20px;
+  }
+  section.restaurants
+  {
+    background-color: #F6F6F6;
+    padding-top: 30px;
+  }
+  section.restaurants .card
+  {
+    width: 100%;
+    margin: auto;
+    margin-bottom: 30px;
+    border-radius: 25px;
+    background-color: #FFF;
+    -webkit-box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
+    box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
+  }
+  section.restaurants .card.taste img
+  {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-top-left-radius: 28px;
+    border-top-right-radius: 25px;
+  }
+  section.restaurants h3, section.restaurants p
+  {
+    margin-left: 15px;
+    font-family: Roboto;
+  }
+  section.restaurants .card h3
+  {
+    font-family: 'Roboto';
+    font-size: 20px;
+    margin-bottom: 0px;
+    font-weight: 700;
+  }
+  section.restaurants .card p
+  {
+    margin-top: 5px;
+    padding-bottom: 20px;
+    font-family: 'Roboto';
+    font-size: 20px;
+    color: #555;
   }
 }
