--- a/css/main.css
+++ b/css/main.css
@@ -177,24 +177,31 @@
     font-size: 20px;
     color: #555;
   }
-  .footer
+  footer
   {
-    padding: 30px 0 15px 15px;
+    padding: 15px 0 15px 15px;
     background-color: #353535;
   }
-  .footer ul
+  footer h1
+  {
+    color: white;
+    font-family: 'Shrikhand';
+    font-size: 35px;
+    font-style: italic;
+  }
+  footer ul
   {
     list-style-type: none;
     padding: 0;
   }
-  .footer ul li
+  footer ul li
   {
     color: #fff;
-    font-family: 'Roboto';
+   font-family: 'Roboto';
     margin-bottom: 10px;
     font-weight: 500;
   }
-  .footer img
+  footer img
   {
     color: #fff;
     width: 150px;
