--- a/css/card_one.css
+++ b/css/card_one.css
@@ -25,3 +25,16 @@ section.menu img
   height: 300px;
   object-fit: cover;
 }
+.menu_card
+{
+  width: 100%;
+  height: 500px;
+  z-index: 1;
+  margin-top: -25px;
+  background: #F6F6F6;
+  border-radius: 25px;
+}
+.menu_card h2
+{
+  font-family: "Shrikhand";
+}
