--- a/css/card_one.css
+++ b/css/card_one.css
@@ -29,12 +29,26 @@ section.menu img
 {
   width: 100%;
   height: 500px;
+  position: absolute;
   z-index: 1;
   margin-top: -25px;
-  background: #F6F6F6;
+  background-color: #F1F1F1;
   border-radius: 25px;
+}
+.menu_card .title
+{
+  display: flex;
 }
 .menu_card h2
 {
+  padding-left: 20px;
   font-family: "Shrikhand";
+  font-size: 35px;
+  flex: 1;
+}
+.menu_card i
+{
+  margin-right: 20px;
+  align-self: center;
+  font-size: 30px;
 }
