--- a/css/card_one.css
+++ b/css/card_one.css
@@ -34,6 +34,8 @@ section.menu img
   margin-top: -25px;
   background-color: #F1F1F1;
   border-radius: 25px;
+  -webkit-box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
+  box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
 }
 .menu_card .title
 {
@@ -51,4 +53,32 @@ section.menu img
   margin-right: 20px;
   align-self: center;
   font-size: 30px;
+}
+.menu_card .card
+{
+  margin: 10px 20px 20px 20px;
+  background-color: #fff;
+  border-radius: 25px;
+  padding: 10px 20px 10px 20px;
+  -webkit-box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
+  box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
+}
+.menu_card .card h3
+{
+  margin-bottom: 0;
+  font-family:'Roboto';
+}
+.menu_card .card p
+{
+  display: flex;
+  margin-top: 5px;
+  font-family: 'Roboto';
+}
+.menu_card p span:first-of-type
+{
+  flex: 1;
+}
+.menu_card p span:last-of-type
+{
+  font-weight: bold;
 }
