:style: css cleanup

--- a/css/main.css
+++ b/css/main.css
@@ -1,209 +1,13 @@
 @media (max-width: 768px)
 {
-  header
-  {
-    text-align: center;
-  }
-  header img
-  {
-    margin-top: 30px;
-  }
-  section.geo
-  {
-    margin: 0;
-    text-align: center;
-    font-family: 'Roboto';
-    color: #555;
-    font-weight: 700;
-    margin-top: 25px;
-    background-color: #EAEAEA;
-    padding: 20px 0 20px 0;
-  }
-  section.geo i
-  {
-    margin-right: 25px;
-  }
-
-  section.explore
-  {
-    padding: 40px 90px 40px 90px;
-    margin: 0;
-    background-color: #F6F6F6;
-    text-align: center;
-  }
-  section.explore h1
-  {
-    font-family: 'Roboto';
-    font-weight: 00;
-    margin: 0;
-  }
-  section.explore p
-  {
-    color: #555;
-    margin: 15px;
-  }
-  section p.explore-btn-container
-  {
-    margin-bottom: 40px;
-  }
-  section p a.explore-btn
-  {
-    display: block;
-    padding: 20px 0 20px 0;
-    font-family:"Roboto";
-    font-weight: 700;
-    color: #FFF;
-    background: rgb(147,86,220);
-    background: linear-gradient(0deg, rgba(147,86,220,1) 24%, rgba(255,121,218,1) 100%);
-    border-radius: 40px;
-  }
-  section.features, section.restaurants
+  .overall-padding
   {
     padding: 20px 20px 40px 20px;
   }
-  section.features h2, section.restaurants h2
+  .overall-section-titles
   {
     font-family: 'Roboto';
     font-weight: 700;
     font-size: 30px;
-  }
-  section.features {}
-  section.features .item
-  {
-    width: 75%;
-    margin: auto;
-    padding: 25px 30px 25px 50px;
-    background-color: #F6F6F6;
-    -webkit-box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
-    box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
-    border-radius: 25px;
-    font-family: 'Roboto';
-  }
-  section.features .item:not(:last-of-type)
-  {
-    margin-bottom: 25px;
-  }
-  section.features .item p.circle
-  {
-    width: 35px;
-    height: 25px;
-    position:absolute;
-    margin-left: -60px;
-    margin-top: 20px;
-    border-radius: 35px;
-    background-color: #9356DC;
-    color: #fff;
-    font-family: 'Roboto';
-    font-weight: 600;
-    text-align: center;
-    padding-top: 10px;
-  }
-  section.features .item p:not(.circle)
-  {
-    font-size: 25px;
-    font-weight: 600;
-  }
-  section.features .item p i
-  {
-    color: #7E7E7E;
-    font-weight: 600;
-    margin-right: 20px;
-  }
-  section.restaurants
-  {
-    background-color: #F6F6F6;
-    padding-top: 30px;
-  }
-  section.restaurants .restaurant .card
-  {
-    width: 90%;
-    margin: auto;
-    margin-bottom: 30px;
-    border-radius: 25px;
-    background-color: #FFF;
-    -webkit-box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
-    box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
-  }
-  section.restaurants .restaurant .card .new
-  {
-    background-color: #99E2D0;
-    position: absolute;
-    right: 70px;
-    margin-top: 20px;
-    padding: 8px 10px 8px 10px;
-    color: #2DA285;
-    font-family: Roboto;
-    font-weight: 600;
-  }
-  section.restaurants .restaurant .card .flex
-  {
-    display: flex;
-  }
-  section.restaurants .restaurant .card .flex div:first-of-type
-  {
-    flex: 1;
-  }
-  section.restaurants .restaurant .card .flex div:last-of-type
-  {
-    margin-right: 25px;
-    margin-top: 30px;
-    font-size: 30px;
-  }
-  section.restaurants .restaurant .card img
-  {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-top-left-radius: 28px;
-    border-top-right-radius: 25px;
-  }
-  section.restaurants .restaurant h3, section.restaurants .restaurant p
-  {
-    margin-left: 15px;
-    font-family: Roboto;
-  }
-  section.restaurants .restaurant .card h3
-  {
-    font-family: 'Roboto';
-    font-size: 20px;
-    margin-bottom: 0px;
-    font-weight: 700;
-  }
-  section.restaurants .restaurant .card p
-  {
-    margin-top: 5px;
-    padding-bottom: 0px;
-    font-family: 'Roboto';
-    font-size: 20px;
-    color: #555;
-  }
-  footer
-  {
-    padding: 15px 0 15px 15px;
-    background-color: #353535;
-  }
-  footer h1
-  {
-    color: white;
-    font-family: 'Shrikhand';
-    font-size: 35px;
-    font-style: italic;
-  }
-  footer ul
-  {
-    list-style-type: none;
-    padding: 0;
-  }
-  footer ul li
-  {
-    color: #fff;
-   font-family: 'Roboto';
-    margin-bottom: 10px;
-    font-weight: 500;
-  }
-  footer img
-  {
-    color: #fff;
-    width: 150px;
   }
 }
