--- a/css/restaurants_menus.css
+++ b/css/restaurants_menus.css
@@ -6,12 +6,6 @@
     display: flex;
     width: 90%;
   }
-  header img
-  {
-    align-self: center;
-    margin: 30px 15px;
-    width: 50%;
-  }
   header i
   {
     font-size: 30px;
@@ -19,15 +13,15 @@
     align-self: center;
   }
   /* Restaurant """ menu """ container */
-  section.menu
+  .menu
   {
     margin-top: 20px;
     width: 100%;
   }
   /* Restaurant """ menu """ image  */
-  section.menu img
+  .section-menu--img
   {
-    width: 100%;
+    width: 10=%;
     height: 300px;
     object-fit: cover;
   }
