--- a/css/restaurants_menus.css
+++ b/css/restaurants_menus.css
@@ -1,46 +1,13 @@
 @media (max-width: 768px)
 {
-  /*** Headers specific to restaurant menu */
-  header
-  {
-    display: flex;
-    width: 90%;
-  }
-<<<<<<< HEAD
-  header img
-  {
-    align-self: center;
-    margin: 30px 15px;
-    width: 50%;
-  }
-=======
->>>>>>> bem
-  header i
-  {
-    font-size: 30px;
-    margin: 0 40px 0 40px;
-    align-self: center;
-  }
   /* Restaurant """ menu """ container */
-<<<<<<< HEAD
   section.menu
-=======
-  .menu
->>>>>>> bem
   {
-    margin-top: 20px;
     width: 100%;
   }
-  /* Restaurant """ menu """ image  */
-<<<<<<< HEAD
-  section.menu img
-  {
-    width: 100%;
-=======
   .section-menu--img
   {
-    width: 10=%;
->>>>>>> bem
+    width: 100;
     height: 300px;
     object-fit: cover;
   }
