--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,23 @@
 @media (max-width: 768px)
 {
-  .overall-padding
-  {
-    padding: 20px 20px 40px 20px;
-  }
+  .overall-padding { padding: 20px 20px 40px 20px; }
+  .overall-restaurant-pres-margin { margin: 10px 20px 20px 20px; }
   .overall-section-titles
   {
     font-family: 'Roboto';
     font-weight: 700;
     font-size: 30px;
+  }
+  .card
+  {
+    background-color: #fff;
+    border-radius: 25px;
+    box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
+    padding: 10px 20px 10px 20px;
+  }
+  .card-title
+  {
+    margin-bottom: 0;
+    font-family:'Roboto';
   }
 }
