--- a/css/restaurants_menus.css
+++ b/css/restaurants_menus.css
@@ -23,8 +23,19 @@
     border-radius: 25px;
     box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
   }
-
-  /* @FIXME ? */
+  /* """ Menu """ card subtitle */
+  .menu-card-category
+  {
+    font-family: 'Roboto';
+    text-transform: uppercase;
+  }
+  .menu-card-categ-line--div
+  {
+    width: 40px;
+    height: 3px;
+    margin-top: -10px;
+    background-color: #92E2D0;
+  }
   /* """ Menu """ card title container */
   .menu_card .title
   {
@@ -44,19 +55,6 @@
     margin-right: 20px;
     align-self: center;
     font-size: 30px;
-  }
-  .menu_card .card
-  {
-    margin: 10px 20px 20px 20px;
-    background-color: #fff;
-    border-radius: 25px;
-    padding: 10px 20px 10px 20px;
-    box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
-  }
-  .menu_card .card h3
-  {
-    margin-bottom: 0;
-    font-family:'Roboto';
   }
   .menu_card .card p
   {
