--- a/css/restaurants_menus.css
+++ b/css/restaurants_menus.css
@@ -1,17 +1,17 @@
 @media (max-width: 768px)
 {
-  /* Restaurant """ menu """ container */
-  section.menu
-  {
-    width: 100%;
-  }
+  /*
+   *
+   * Overall restaurant menu container
+   *
+  */
+  section.menu { width: 100%; }
   .section-menu--img
   {
     width: 100;
     height: 300px;
     object-fit: cover;
   }
-  /* """ Menu """ card container */
   .menu_card
   {
     width: 100%;
@@ -22,24 +22,8 @@
     border-radius: 25px;
     box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
   }
-  /* """ Menu """ card subtitle */
-  .menu-card-category
-  {
-    font-family: 'Roboto';
-    text-transform: uppercase;
-  }
-  .menu-card-categ-line--div
-  {
-    width: 40px;
-    height: 3px;
-    margin-top: -10px;
-    background-color: #92E2D0;
-  }
   /* """ Menu """ card title container */
-  .menu_card .title
-  {
-    display: flex;
-  }
+  .menu_card .title { display: flex; }
   /* """ Menu """ card title */
   .menu_card h2
   {
@@ -61,12 +45,43 @@
     margin-top: 5px;
     font-family: 'Roboto';
   }
-  .menu_card p span:first-of-type
+  .menu_card p span:first-of-type { flex: 1; }
+  .menu_card p span:last-of-type { font-weight: bold; }
+  /*
+   *
+   * Uniq card element that represents a restaurant menu item
+   *
+  */
+  /* """ Menu """ card subtitle */
+  .menu-card-category
   {
-    flex: 1;
+    font-family: 'Roboto';
+    text-transform: uppercase;
   }
-  .menu_card p span:last-of-type
+  .menu-card-categ-line--div
   {
-    font-weight: bold;
+    width: 40px;
+    height: 3px;
+    margin-top: -10px;
+    background-color: #92E2D0;
+  }
+  /* Card animation */
+  /* @FIXME */
+  .card.card-restaurant:hover h3, .card.card-restaurant:hover p
+  {
+    width: 85%;
+  }
+  .card .card-select--div
+  {
+    display: none;
+    background-color: #99E2D0;
+  }
+  /* FIXME */
+  .card.card-restaurant:hover .card-select--div
+  {
+    display: block;
+    float: right;
+    height: 100%;
+    width: 15%;
   }
 }
