--- a/css/header.css
+++ b/css/header.css
@@ -31,12 +31,15 @@
   section.head
   {
     margin: 25px 0 0 0 0;
-    padding: 20px 0 20px 0;
-    background-color: #EAEAEA;
+    padding: 30px 0 20px 0;
     text-align: center;
     font-family: 'Roboto';
     color: #555;
     font-weight: 700;
+  }
+  section.head-location
+  {
+    background-color: #EAEAEA;
   }
   section.head i
   {
