--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,21 @@
 {
   .overall-padding { padding: 20px 20px 40px 20px; }
   .overall-restaurant-pres-margin { margin: 10px 20px 20px 20px; }
+
+  .pdg-top-none { padding-top: 0 }
+  .pdg-btm-none { padding-bottom: 0 }
+  .mrg-none { margin: none }
+  .mrg-top-none { margin-top: 0 }
+  .mrg-btm-none { margin-bottom: 0 }
+
+  .bg-light { background-color: #EAEAEA; }
+  .bg-light-alt { background-color: #F6F6F6; }
+
   .overall-section-titles
   {
     font-family: 'Roboto';
     font-weight: 700;
-    font-size: 30px;
+    font-size: 25px;
   }
   .card
   {
