--- a/css/header.css
+++ b/css/header.css
@@ -42,7 +42,7 @@
   {
     margin-top: 0;
     font-weight: 300;
-    font-size: px;
+    font-size: 18px;
     font-family: Roboto;
   }
   section.head .head-location
@@ -55,7 +55,7 @@
   section.head p:last-of-type
   {
     margin: 0;
-    padding: 10px 90px 15px 90px;
+    padding: 10px 20px 15px 20px;
     text-align: center;
   }
   /* """ Heading """ explore presentation title text */
@@ -76,6 +76,8 @@
   section p.explore-btn-container { margin-bottom: 40px; }
   section p a.explore-btn
   {
+    width: 250px;
+    margin: auto;
     display: block;
     padding: 20px 0 20px 0;
     margin-bottom: 30px;
