--- a/css/main.css
+++ b/css/main.css
@@ -2,32 +2,35 @@
 {
   .overall-padding { padding: 20px 20px 40px 20px; }
   .overall-restaurant-pres-margin { margin: 10px 20px 20px 20px; }
+}
 
-  .pdg-top-none { padding-top: 0 }
-  .pdg-btm-none { padding-bottom: 0 }
-  .mrg-none { margin: none }
-  .mrg-top-none { margin-top: 0 }
-  .mrg-btm-none { margin-bottom: 0 }
+.pdg-top-none { padding-top: 0; }
+.pdg-btm-none { padding-bottom: 0; }
+.mrg-none { margin: none; }
+.mrg-top-none { margin-top: 0; }
+.mrg-btm-none { margin-bottom: 0; }
+.pdg-soft { padding: 5px; }
 
-  .bg-light { background-color: #EAEAEA; }
-  .bg-light-alt { background-color: #F6F6F6; }
+a.link-black { color: black }
+a.no-decoration { text-decoration: none; }
 
-  .overall-section-titles
-  {
-    font-family: 'Roboto';
-    font-weight: 700;
-    font-size: 25px;
-  }
-  .card
-  {
-    background-color: #fff;
-    border-radius: 25px;
-    box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
-    padding: 10px 20px 10px 20px;
-  }
-  .card-title
-  {
-    margin-bottom: 0;
-    font-family:'Roboto';
-  }
+.bg-light { background-color: #EAEAEA; }
+.bg-light-alt { background-color: #F6F6F6; }
+
+.overall-section-titles
+{
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 25px;
+}
+.card
+{
+  background-color: #fff;
+  border-radius: 25px;
+  box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
+}
+.card-title
+{
+  margin-bottom: 0;
+  font-family:'Roboto';
 }
