--- a/css/restaurants_list.css
+++ b/css/restaurants_list.css
@@ -11,32 +11,23 @@
   {
     width: 90%;
     margin: auto;
-    margin-bottom: 30px;
-    border-radius: 25px;
-    background-color: #FFF;
-    box-shadow: 5px 11px 15px 5px rgba(0,0,0,0.09);
+    margin: 0 auto 30px auto;
   }
   /** """ Restaurants """ card """ new """ mention */
   section.restaurants .restaurant .card .new
   {
     position: absolute;
     margin-top: 20px;
-    padding: 8px 10px 8px 10px;
-    right: 70px;
+    padding: 5px 8px 5px 8px;
+    right: 60px;
     background-color: #99E2D0;
     color: #2DA285;
     font-family: Roboto;
-    font-weight: 600;
+    font-weight: 500;
   }
   /** """ Restaurants cards content is a flex line */
-  section.restaurants .restaurant .card .flex
-  {
-    display: flex;
-  }
-  section.restaurants .restaurant .card .flex div:first-of-type
-  {
-    flex: 1;
-  }
+  section.restaurants .restaurant .card .flex { display: flex; }
+  section.restaurants .restaurant .card .flex div:first-of-type{ flex: 1; }
   section.restaurants .restaurant .card .flex div:last-of-type
   {
     margin: 25px 25px 0 0;
