--- a/css/restaurants_menus.css
+++ b/css/restaurants_menus.css
@@ -6,13 +6,13 @@
    *
   */
   section.menu { width: 100%; }
-  .section-menu--img
+  section.menu .section-menu--img
   {
     width: 100;
     height: 300px;
     object-fit: cover;
   }
-  .menu_card
+  section.menu .menu-card
   {
     width: 100%;
     position: absolute;
@@ -23,9 +23,9 @@
     box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
   }
   /* """ Menu """ card title container */
-  .menu_card .title { display: flex; }
+  section.menu .menu-card .menu-card-title { display: flex; }
   /* """ Menu """ card title */
-  .menu_card h2
+  section.menu .menu-card h2
   {
     padding-left: 20px;
     font-family: "Shrikhand";
@@ -33,20 +33,20 @@
     flex: 1;
   }
   /* """ Menu """ card heart icon */
-  .menu_card i
+  .section.menu .menu-card i
   {
     margin-right: 20px;
     align-self: center;
     font-size: 30px;
   }
-  .menu_card .card p
+  .section.menu .menu-card .card p
   {
     display: flex;
     margin-top: 5px;
     font-family: 'Roboto';
   }
-  .menu_card p span:first-of-type { flex: 1; }
-  .menu_card p span:last-of-type { font-weight: bold; }
+  .section.menu .menu-card p span:first-of-type { flex: 1; }
+  .section.menu .menu-card p span:last-of-type { font-weight: bold; }
   /*
    *
    * Uniq card element that represents a restaurant menu item
