--- a/css/restaurants_menus.css
+++ b/css/restaurants_menus.css
@@ -33,55 +33,36 @@
     flex: 1;
   }
   /* """ Menu """ card heart icon */
-  .section.menu .menu-card i
+  section.menu .menu-card i
   {
     margin-right: 20px;
     align-self: center;
     font-size: 30px;
   }
-  .section.menu .menu-card .card p
+  section.menu .menu-card .card p
   {
     display: flex;
     margin-top: 5px;
     font-family: 'Roboto';
   }
-  .section.menu .menu-card p span:first-of-type { flex: 1; }
-  .section.menu .menu-card p span:last-of-type { font-weight: bold; }
+  section.menu .menu-card p span:first-of-type { flex: 1; }
+  section.menu .menu-card p span:last-of-type { font-weight: bold; }
   /*
    *
    * Uniq card element that represents a restaurant menu item
    *
   */
   /* """ Menu """ card subtitle */
-  .menu-card-category
+  section.menu .menu-card-category
   {
     font-family: 'Roboto';
     text-transform: uppercase;
   }
-  .menu-card-categ-line--div
+  section.menu .menu-card-categ-line--div
   {
     width: 40px;
     height: 3px;
     margin-top: -10px;
     background-color: #92E2D0;
-  }
-  /* Card animation */
-  /* @FIXME */
-  .card.card-restaurant:hover h3, .card.card-restaurant:hover p
-  {
-    width: 85%;
-  }
-  .card .card-select--div
-  {
-    display: none;
-    background-color: #99E2D0;
-  }
-  /* FIXME */
-  .card.card-restaurant:hover .card-select--div
-  {
-    display: block;
-    float: right;
-    height: 100%;
-    width: 15%;
   }
 }
