--- a/css/header.css
+++ b/css/header.css
@@ -23,7 +23,7 @@
   header .header-back--i
   {
     position: absolute;
-    top: 35px;
+    top: 25px;
     left: 15px;
     font-size: 25px;
   }
@@ -42,6 +42,7 @@
     font-weight: 700;
     color: #555;
   }
+  section.head .menu-card-heart-icon--i {}
   .head-subtitle--p
   {
     margin-top: 0;
