--- a/css/restaurants_menus.css
+++ b/css/restaurants_menus.css
@@ -23,7 +23,7 @@
     box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
   }
   /* """ Menu """ card title container */
-  section.menu .menu-card .menu-card-title { display: flex; }
+  section.menu .menu-card .menu-card-title--div { display: flex; }
   /* """ Menu """ card title */
   section.menu .menu-card h2
   {
