--- a/css/main.css
+++ b/css/main.css
@@ -4,18 +4,32 @@
   .overall-restaurant-pres-margin { margin: 10px 20px 20px 20px; }
 }
 
+.d-none { display: none; }
+.d-block { display: block; }
+.d-inline-block { display: inline-block; }
+.d-flex { display: flex }
+
 .pdg-top-none { padding-top: 0; }
 .pdg-btm-none { padding-bottom: 0; }
+.pdg-soft { padding: 5px; }
+
 .mrg-none { margin: none; }
 .mrg-top-none { margin-top: 0; }
 .mrg-btm-none { margin-bottom: 0; }
-.pdg-soft { padding: 5px; }
+.mrg-right-none { margin-right: 0 }
+.mrg-left-none { margin-left: 0; }
 
-a.link-black { color: black }
+a.link-black { color: black; }
 a.no-decoration { text-decoration: none; }
 
 .bg-light { background-color: #EAEAEA; }
 .bg-light-alt { background-color: #F6F6F6; }
+
+.radius-none { border-radius: 0                             !important; }
+.radius-top-left-none { border-top-left-radius: 0px         !important; }
+.radius-top-right-none { border-top-right-radius: 0px       !important; }
+.radius-bottom-left-none { border-bottom-left-radius: 0px   !important; }
+.radius-bottom-right-none { border-bottom-right-radius: 0px !important; }
 
 .overall-section-titles
 {
@@ -23,12 +37,14 @@ a.no-decoration { text-decoration: none; }
   font-weight: 700;
   font-size: 25px;
 }
+
 .card
 {
   background-color: #fff;
-  border-radius: 25px;
+  border-radius: 20px;
   box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
 }
+
 .card-title
 {
   margin-bottom: 0;
