--- a/css/restaurants_menus.css
+++ b/css/restaurants_menus.css
@@ -15,13 +15,12 @@
   section.menu .menu-card
   {
     width: 100%;
-    position: absolute;
+    position: relative;
     z-index: 1;
     margin-top: -25px;
     background-color: #F1F1F1;
     border-radius: 25px;
-    box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
-  }
+    box-shadow: 5px -5px 15px -5px rgba(0,0,0,0.2);  }
   /* """ Menu """ card title container */
   section.menu .menu-card .menu-card-title--div { display: flex; }
   /* """ Menu """ card title */
@@ -113,7 +112,4 @@
     color: #fff;
   }
   section.menu .card-restaurant-container:hover .card-hovered-area .card-restaurant-check--i { font-size: 22px; }
-  {
-
-  }
 }
