--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@
 .pdg-top-none { padding-top: 0; }
 .pdg-btm-none { padding-bottom: 0; }
 .pdg-soft { padding: 5px; }
+.pdg-medium { padding: 15px; }
+.pdg-high { padding: 30px; }
 
 .mrg-none { margin: none; }
 .mrg-top-none { margin-top: 0; }
@@ -49,4 +51,26 @@ a.no-decoration { text-decoration: none; }
 {
   margin-bottom: 0;
   font-family:'Roboto';
+}
+
+/* """ Explore button */
+section .action-button-container {
+  margin-bottom: 40px;
+  text-align: center;
+}
+section .action-button-container-a
+{
+  width: 250px;
+  margin: auto;
+  display: block;
+  padding: 20px 0 20px 0;
+  margin-bottom: 30px;
+  background: linear-gradient(0deg, rgba(147,86,220,1) 24%,
+                                    rgba(255,121,218,1) 100%);
+  box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.25);
+  border-radius: 40px;
+  font-family:"Roboto";
+  font-weight: 700;
+  color: #FFF;
+  cursor: pointer;
 }
