--- a/css/header.css
+++ b/css/header.css
@@ -15,19 +15,19 @@
     position: relative;
     box-shadow: 5px 16px 15px -10px rgba(0,0,0,0.15);
   }
-  header .header-img
+  header .header__img
   {
     margin: 20px 0 10px 0;
     width: 50%;
   }
-  header .header-back-i
+  header .header__back
   {
     position: absolute;
     top: 25px;
     left: 15px;
     font-size: 25px;
   }
-  header .header-back-a { color: #000; }
+  header .header__back-link { color: #000; }
   /*
    * """ Localisation """ section
    */
@@ -36,7 +36,7 @@
     padding: 0px 0 20px 0;
     text-align: center;
   }
-  section.head .head-title-h2
+  section.head .head__title
   {
     font-family: 'Roboto';
     font-weight: 700;
