--- a/css/main.css
+++ b/css/main.css
@@ -1,76 +1,110 @@
-@media (max-width: 768px)
-{
-  .overall-padding { padding: 20px 20px 40px 20px; }
-  .overall-restaurant-pres-margin { margin: 10px 20px 20px 20px; }
-}
+@media (max-width: 768px) {
+  .overall-padding {
+    padding: 20px 20px 40px 20px; }
 
-.d-none { display: none; }
-.d-block { display: block; }
-.d-inline-block { display: inline-block; }
-.d-flex { display: flex }
+  .overall-restaurant-pres-margin {
+    margin: 10px 20px 20px 20px; }
 
-.pdg-top-none { padding-top: 0; }
-.pdg-btm-none { padding-bottom: 0; }
-.pdg-soft { padding: 5px; }
-.pdg-medium { padding: 15px; }
-.pdg-high { padding: 30px; }
+  .d-none {
+    display: none; }
 
-.mrg-none { margin: none; }
-.mrg-top-none { margin-top: 0; }
-.mrg-btm-none { margin-bottom: 0; }
-.mrg-right-none { margin-right: 0 }
-.mrg-left-none { margin-left: 0; }
+  .d-block {
+    display: block; }
 
-a.link-black { color: black; }
-a.no-decoration { text-decoration: none; }
+  .d-inline-block {
+    display: inline-block; }
 
-.bg-light { background-color: #EAEAEA; }
-.bg-light-alt { background-color: #F6F6F6; }
+  .d-flex {
+    display: flex; }
 
-.radius-none { border-radius: 0                             !important; }
-.radius-top-left-none { border-top-left-radius: 0px         !important; }
-.radius-top-right-none { border-top-right-radius: 0px       !important; }
-.radius-bottom-left-none { border-bottom-left-radius: 0px   !important; }
-.radius-bottom-right-none { border-bottom-right-radius: 0px !important; }
+  .pdg-top-none {
+    padding-top: 0; }
 
-.overall-section-titles
-{
-  font-family: 'Roboto';
-  font-weight: 700;
-  font-size: 25px;
-}
+  .pdg-btm-none {
+    padding-bottom: 0; }
 
-.card
-{
-  background-color: #fff;
-  border-radius: 20px;
-  box-shadow: 5px 5px 15px 0px rgba(0,0,0,0.16);
-}
+  .pdg-soft {
+    padding: 5px; }
 
-.card-title
-{
-  margin-bottom: 0;
-  font-family:'Roboto';
-}
+  .pdg-medium {
+    padding: 15px; }
 
-/* """ Explore button */
-section .action-button-container {
-  margin-bottom: 40px;
-  text-align: center;
-}
-section .action-button-container-a
-{
-  width: 250px;
-  margin: auto;
-  display: block;
-  padding: 20px 0 20px 0;
-  margin-bottom: 30px;
-  background: linear-gradient(0deg, rgba(147,86,220,1) 24%,
-                                    rgba(255,121,218,1) 100%);
-  box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.25);
-  border-radius: 40px;
-  font-family:"Roboto";
-  font-weight: 700;
-  color: #FFF;
-  cursor: pointer;
-}
+  .pdg-high {
+    padding: 30px; }
+
+  .mrg-none {
+    margin: none; }
+
+  .mrg-top-none {
+    margin-top: 0; }
+
+  .mrg-btm-none {
+    margin-bottom: 0; }
+
+  .mrg-right-none {
+    margin-right: 0; }
+
+  .mrg-left-none {
+    margin-left: 0; }
+
+  a.link-black {
+    color: black; }
+
+  a.no-decoration {
+    text-decoration: none; }
+
+  .bg-light {
+    background-color: #EAEAEA; }
+
+  .bg-light-alt {
+    background-color: #F6F6F6; }
+
+  .radius-none {
+    border-radius: 0 !important; }
+
+  .radius-top-left-none {
+    border-top-left-radius: 0px !important; }
+
+  .radius-top-right-none {
+    border-top-right-radius: 0px !important; }
+
+  .radius-bottom-left-none {
+    border-bottom-left-radius: 0px !important; }
+
+  .radius-bottom-right-none {
+    border-bottom-right-radius: 0px !important; }
+
+  .overall-section-titles {
+    font-family: "Roboto";
+    font-weight: 700;
+    font-size: 25px; }
+
+  .card {
+    background-color: #fff;
+    border-radius: 20px;
+    box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.16); }
+
+  .card-title {
+    margin-bottom: 0;
+    font-family: "Roboto"; }
+
+  /* """ Explore button */
+  section .action-button-container {
+    margin-bottom: 40px;
+    text-align: center; }
+
+  section .action-button-container-a {
+    width: 250px;
+    margin: auto;
+    display: block;
+    padding: 20px 0 20px 0;
+    margin-bottom: 30px;
+    background: linear-gradient(0deg, #9356dc 24% #ff79da 100);
+    box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 40px;
+    font-family: "Roboto";
+    font-weight: 700;
+    color: #FFF;
+    cursor: pointer; } }
+
+/*# sourceMappingURL=main.css.map */
